# 2024_PTS

./: 00_Intro.ipynb  01_Scraping Basics.ipynb  02_Redirect and other odities.ipynb  03_Usage.ipynb  04_Integration.ipynb  05_Pivot_Investigate.ipynb  README.md  pyproject.toml
