[tool.poetry]
name = "lookyloo-tutorial"
version = "0.1.0"
description = "A developer-oriented tutorial to understand what lookyloo is for"
authors = ["Raphaël Vinot <raphael@lookyloo.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.2"
pylookyloo = "^1.24.0"
pymisp = {version = "^2.4.194", extras = ["email", "fileobjects", "url"]}
pyphishtanklookup = "^1.3.2"
pypandora = "^1.8.1"
pylacus = "^1.9.0"
lacuscore = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
